# agentic-workflow

./: .coverage  .dockerignore  .env.example  .gitignore  2_supervisor_multiagent_workflow.ipynb  Dockerfile  README-docker.md  README.md  chainlit.md  chainlit_app.py  docker-compose.yml  main.py  main_v2.py  pyproject.toml  streamlit_app.py  streamlit_log.txt  task.txt
src/config/: settings.py
src/graphs/: agent_flow.py  agent_flow_v2.py
src/graphs/nodes/: __init__.py  analyst.py  coder.py  enhancer.py  final_output_provider.py  general_answer_provider.py  researcher.py  supervisor.py  validator.py
src/tools/: __init__.py  document.py  search_tool.py  weather.py
src/ui/: streamlit_app.py
src/utils/: utils.py
tests/: conftest.py  test_document_tool.py  test_weather_tool.py
